# compiler_research

./: .gitignore  CMakeLists.txt  README.md  basicblock.cpp  basicblock.hpp  config.hpp  graph.hpp  instruction.cc  instruction.hpp
include/: LoopTreeBuilder.hpp  basicblock.hpp  bbGraph.hpp  checkElimination.hpp  config.hpp  constFoldProp.hpp  defines.hpp  graph.hpp  inlining.hpp  instruction.hpp  memManager.hpp  types.hpp
src/: LoopTreeBuilder.cc  basicblock.cpp  bbGraph.cc  graph.cc  graph.cpp  instruction.cc  main.cc
tests/: CMakeLists.txt  checkElimination.cc  peepholes_const_foldprop.cc
tests/graph/: test1.cc
